Fixed iframe size and scroll on ios.

--- a/css/cniga.css
+++ b/css/cniga.css
@@ -486,8 +486,11 @@ section.iframe .inner {
   height: 100%; }
 
 section.iframe iframe {
-  width: 100%;
-  height: 100%; }
+  width: 1px;
+  min-width: 100%;
+  height: 100%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch; }
 
 .bill {
   border-bottom: 1px solid #494949;
