--- a/scss/partials/sections/_iframe.scss
+++ b/scss/partials/sections/_iframe.scss
@@ -1,4 +1,10 @@
 section.iframe {
   .inner { padding: 0; height: 100% }
-  iframe { width: 100%; height: 100%; }
+  iframe {
+    width: 1px;
+    min-width: 100%;
+    height: 100%;
+    overflow: scroll;
+     -webkit-overflow-scrolling: touch;
+  }
 }
